Opened 15 years ago

Closed 15 years ago

#414 closed defect (fixed)

Compilation broken when disabling avfilter

Reported by: takis Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

When configuring ffmpeg without avfilter, compilation fails when the build system tries to compile avconv.c:

../configure --disable-avfilter
...
CC      avconv.o
/usr/local/src/ff/ffmpeg.org/avconv.c: In function ‘do_video_resample’:
/usr/local/src/ff/ffmpeg.org/avconv.c:1095:43: error: ‘enc’ undeclared (first use in this function)
/usr/local/src/ff/ffmpeg.org/avconv.c:1095:43: note: each undeclared identifier is reported only once for each function it appears in
/usr/local/src/ff/ffmpeg.org/avconv.c:1122:15: warning: passing argument 2 of ‘sws_scale’ from incompatible pointer type
/usr/local/src/ff/ffmpeg.org/libswscale/swscale.h:238:5: note: expected ‘const uint8_t * const*’ but argument is of type ‘uint8_t * *’
/usr/local/src/ff/ffmpeg.org/avconv.c: In function ‘init_input_stream’:
/usr/local/src/ff/ffmpeg.org/avconv.c:1893:9: warning: unused variable ‘i’
/usr/local/src/ff/ffmpeg.org/avconv.c: In function ‘transcode’:
/usr/local/src/ff/ffmpeg.org/avconv.c:2338:26: warning: ignoring return value of ‘scanf’, declared with attribute warn_unused_result
make: * * * [avconv.o] Error 1

Change History (1)

comment:1 by Carl Eugen Hoyos, 15 years ago

Component: build systemundetermined
Resolution: fixed
Status: newclosed
Version: gitgit-master

Should be fixed.

Note: See TracTickets for help on using tickets.